# cppql

./: .gitmodules  CMakeLists.txt  build_instructions.md  conanfile.py  conanfile.txt  cppqlVersionString.cmake  readme.md  version_history.md
modules/cppql/: CMakeLists.txt  cppqlVersionString.cmake  readme.md
modules/cppql/include/cppql/: binding.h  database.h  include_all.h  statement.h  table.h
modules/cppql/include/cppql/aggregates/: average_aggregate.h  count_aggregate.h  max_aggregate.h  min_aggregate.h  sum_aggregate.h  total_aggregate.h
modules/cppql/include/cppql/clauses/: columns.h  group_by.h  having.h  on.h  order_by.h  union.h  using.h  where.h
modules/cppql/include/cppql/core/: assert.h  binding.h  column.h  database.h  enums.h  statement.h  table.h  transaction.h
modules/cppql/include/cppql/error/: cppql_error.h  sqlite_error.h
modules/cppql/include/cppql/expressions/: aggregate_expression.h  base_filter_expression.h  column_comparison_expression.h  column_expression.h  comparison_expression.h  filter_expression.h  like_expression.h  logical_expression.h  order_by_expression.h
modules/cppql/include/cppql/ext/: typed_table.h
modules/cppql/include/cppql/queries/: count_query.h  delete_query.h  fwd.h  insert_query.h  select_query.h  update_query.h
modules/cppql/include/cppql/statements/: count_statement.h  delete_statement.h  fwd.h  insert_statement.h  select_one_statement.h  select_statement.h  update_statement.h
modules/cppql/include/cppql/typed/: fwd.h  join.h  join_type.h  typed_table.h
modules/cppql/src/: column.cpp  database.cpp  statement.cpp  table.cpp
modules/cppql/src/core/: column.cpp  database.cpp  statement.cpp  table.cpp  transaction.cpp
modules/cppql/src/error/: cppql_error.cpp  sqlite_error.cpp
tests/cppql_test/: CMakeLists.txt
tests/cppql_test/include/cppql_test/: bind.h  bind_blob.h  bind_int.h  bind_null.h  bind_real.h  bind_template.h  bind_text.h  create_column_blob.h  create_column_foreign_key.h  create_column_int.h  create_column_null.h  create_column_primary_key.h  create_column_primary_key_multiple.h  create_column_real.h  create_column_text.h  create_database.h  create_table.h  create_typed_table_blob.h  create_typed_table_int.h  create_typed_table_real.h  create_typed_table_text.h  delete_rows.h  foreign_key.h  get_column_blob.h  get_column_int.h  insert.h  insert_blob.h  insert_default.h  select.h  statement_prepare.h  statement_step.h  test01.h  transaction.h  typed_table.h  utils.h
tests/cppql_test/include/cppql_test/aggregates/: aggregate_average.h  aggregate_count.h  aggregate_max.h  aggregate_min.h  aggregate_sum.h  aggregate_total.h
tests/cppql_test/include/cppql_test/binding/: bind.h  bind_blob.h  bind_int.h  bind_null.h  bind_real.h  bind_template.h  (+1 more)
tests/cppql_test/src/: bind.cpp  bind_blob.cpp  bind_int.cpp  bind_null.cpp  bind_real.cpp  bind_template.cpp  bind_text.cpp  create_column_blob.cpp  create_column_foreign_key.cpp  create_column_int.cpp  create_column_null.cpp  create_column_primary_key.cpp  create_column_primary_key_multiple.cpp  create_column_real.cpp  create_column_text.cpp  create_database.cpp  create_table.cpp  create_typed_table_blob.cpp  create_typed_table_int.cpp  create_typed_table_real.cpp  create_typed_table_text.cpp  delete_rows.cpp  delete_rows_all.cpp  foreign_key.cpp  get_column_blob.cpp  get_column_int.cpp  get_column_real.cpp  get_column_text.cpp  insert.cpp  insert_blob.cpp  insert_default.cpp  insert_tuple.cpp  main.cpp  select.cpp  select_custom_return_type.cpp  statement_prepare.cpp  statement_step.cpp  test01.cpp  transaction.cpp  typed_table.cpp  (+1 more)
tests/cppql_test/src/aggregates/: aggregate_average.cpp  aggregate_count.cpp  aggregate_max.cpp  aggregate_min.cpp  aggregate_sum.cpp  aggregate_total.cpp
tests/cppql_test/src/binding/: bind.cpp  bind_blob.cpp  bind_int.cpp  bind_null.cpp  bind_real.cpp  bind_template.cpp  bind_text.cpp
tests/cppql_test/src/clauses/: clause_columns.cpp  clause_group_by.cpp  clause_having.cpp  clause_limit.cpp  clause_on.cpp  clause_order_by.cpp  clause_union.cpp  clause_using.cpp  clause_where.cpp
tests/cppql_test/src/create_column/: create_column_blob.cpp  create_column_check.cpp  create_column_collate.cpp  create_column_default_value.cpp  create_column_foreign_key.cpp  create_column_int.cpp  create_column_null.cpp  create_column_primary_key.cpp  create_column_primary_key_multiple.cpp  create_column_real.cpp  create_column_text.cpp  create_column_unique.cpp
tests/cppql_test/src/database/: database_create.cpp  database_vacuum.cpp
tests/cppql_test/src/delete/: delete_rows.cpp  delete_rows_all.cpp  delete_rows_limit.cpp
tests/cppql_test/src/expressions/: expression_aggregate.cpp  expression_column.cpp  expression_column_comparison.cpp  expression_comparison.cpp  expression_like.cpp  expression_logical.cpp  expression_order_by.cpp
tests/cppql_test/src/get_column/: get_column_blob.cpp  get_column_int.cpp  get_column_real.cpp  get_column_template.cpp  get_column_text.cpp  get_column_type.cpp
tests/cppql_test/src/insert/: insert.cpp  insert_blob.cpp  insert_default.cpp  insert_null.cpp  insert_tuple.cpp
tests/cppql_test/src/join/: inner_join.cpp
tests/cppql_test/src/queries/: query_count.cpp  query_delete.cpp  query_insert.cpp  query_join.cpp  query_select.cpp  query_union.cpp  query_update.cpp
tests/cppql_test/src/select/: select.cpp  select_all.cpp  select_blob.cpp  select_custom_return_type.cpp  select_limit.cpp  select_one.cpp  select_order_by.cpp  select_order_by_null.cpp  select_reorder.cpp  select_reset.cpp  select_to_vector.cpp
tests/cppql_test/src/statements/: statement_count.cpp  statement_delete.cpp  statement_insert.cpp  statement_select.cpp  statement_select_one.cpp  statement_update.cpp
tests/cppql_test/src/table/: create_table.cpp  drop_table.cpp  register_table.cpp
tests/cppql_test/src/typed_table/: create_typed_table.cpp  create_typed_table_blob.cpp  create_typed_table_int.cpp  create_typed_table_real.cpp  create_typed_table_text.cpp
tests/cppql_test/src/update/: update.cpp  update_limit.cpp
(+190 files in other folders)
